--- a/index.html
+++ b/index.html
@@ -164,20 +164,20 @@
     <div class="parte3" id="parte3">
         <h2 class="subtitulo1">Habilidades</h2>
         <p class="Habilidades">HTML</p>
-        <progress class="barra-progresso" max="100" value="80">
+        <progress class="barra-progresso" id="barra" max="100" value="80">
             
         </progress>
         <p class="Habilidades">CSS</p>
-        <progress class="barra-progresso" max="100" value="80">
+        <progress class="barra-progresso" id="barra" max="100" value="80">
 
         </progress>
         <p class="Habilidades">Python</p>
-        <progress class="barra-progresso" max="100" value="70">
+        <progress class="barra-progresso" id="barra" max="100" value="70">
 
         </progress>
         </progress>
         <p class="Habilidades">Django</p>
-        <progress class="barra-progresso" max="100" value="40">
+        <progress class="barra-progresso" id="barra" max="100" value="40">
 
         </progress>
     </div>
