efeito na imagem
background-attachment: fixed;

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
 
     <div class="parte3" id="parte3">
-        <h2 class="subtitulo1">Habilidades</h2>
+        <h2 class="subtitulo1">HABILIDADES</h2>
         <p class="Habilidades">HTML</p>
         <progress class="barra-progresso" id="barra" max="100" value="80">
             
