--- a/index.html
+++ b/index.html
@@ -43,13 +43,21 @@
         </nav>
     </header>
 
-    <main class="px-3">
+    <main>
         <section>
+            <!-- Onde fica o titulo e a foto -->
+            <div class="card mt-5 text-center" style="background-color: #0D0D0D;">
+                <div class="card-body">
+                    <h2>OLá, eu sou</h2>
+                    <h1>Gustavo Junior dos Santos</h1>
+                    <h3>Estudante de Programação</h3>
+                </div>
+                <img class="rounded mx-auto d-block" src="imagens/imagem_sem_fundo.png" alt="Foto-do-gustavo">
+            </div>
+
             <!-- Primeira parte: onde faço minha apresentação -->
-            <article class="shadow px-5 mb-5 rounded apresentacao">  
-                <h2 class="text-center">Olá, sou o</h2>
-                <h1 class="text-center" id="title">Gustavo Junior Dos Santos</h1>
-                <h3 class="text-center">Estudante de programação</h3>
+            <article class="px-5 mb-5 apresentacao">  
+
                 <p class="text-center">
                     Tenho o prazer de compartilhar um pouco sobre minha jornada. Originário de Cafeara, no Paraná, tenho 37 anos e atualmente desempenho o papel de operador de máquinas agrícolas. No entanto, estou aqui para falar sobre uma paixão crescente e uma transição que estou buscando: minha entrada no mundo da Tecnologia da Informação (TI).
                 </p>
@@ -74,18 +82,10 @@
                 <p class="text-center">
                     Agradeço sinceramente pela oportunidade de compartilhar minha jornada e estou entusiasmado para as emocionantes oportunidades que o futuro reserva.
                 </p>
-                <div class="text-center">
-                    <a class="btn btn-danger" href="#certificados" role="button">Mais informações</a>
-                </div>
             </article>
 
-            <!-- Aside: minha foto de perfil -->
-            <aside class="text-center foto shadow mb-5 rounded" id="img">
-                <img src="imagens/imagem_sem_fundo.png" class="img-fluid" alt="foto-do-gustavo">
-            </aside>
-
             <!-- Segunda parte: onde está listados os cursos -->
-            <article class="shadow p-5 mb-5 rounded cursos" id="certificados">
+            <article class="p-5 mb-5" id="certificados">
 
                 <h2 class="text-center">Cursos</h2>
 
@@ -134,27 +134,28 @@
                     O curso de hardware teve duração de 20 horas e foi finalizado em 3 de setembro de 2022, com aproveitamento superior a 70%. O código do certificado é 673C7-6616-2, emitido pela empresa "<a href="https://www.cursoemvideo.com/">Curso em Vídeo</a>".
                 </p>
             </article>
+
             <!-- Terceira parte: grafico das minhas habilidades -->
-            <article class="shadow p-5 mb-5 rounded graficos" id="habilidades">
+            <article class="p-5" id="habilidades">
                 <h2 class="text-center">HABILIDADES</h2>
 
-                <div class="progress" style="height: 20px; background-color: #0D0D0D; margin-bottom: 15px;">
-                    <div class="progress-bar" role="progressbar" style="width: 70%; background-color: #590202; color: #828a9c;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress my-3 bg-dark">
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                         HTML 70%
                     </div>
                 </div>
-                <div class="progress" style="height: 20px; background-color: #0D0D0D; margin-bottom: 15px;">
-                    <div class="progress-bar" role="progressbar" style="width: 75%; background-color: #590202; color: #828a9c;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                        CSS 75%
+                <div class="progress my-3 bg-dark">
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                        CSS 70%
                     </div>
                 </div>
-                <div class="progress" style="height: 20px; background-color: #0D0D0D; margin-bottom: 15px;">
-                    <div class="progress-bar" role="progressbar" style="width: 50%; background-color: #590202; color: #828a9c;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress my-3 bg-dark">
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                         Python 50%
                     </div>
                 </div>
-                <div class="progress" style="height: 20px; background-color: #0D0D0D;">
-                    <div class="progress-bar" role="progressbar" style="width: 30%; background-color: #590202; color: #828a9c;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress my-3 bg-dark">
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
                         Django 30%
                     </div>
                 </div>
@@ -162,6 +163,7 @@
             </article>
         </section>
     </main>
+
     <!-- Footer: rodapé contendo informações de contato -->
     <footer class="text-center p-5 rodape">
         <p>Gustavo Junior dos Santos</p>
@@ -172,6 +174,7 @@
             <a href="https://codepen.io/gustavodsantos/pen/jORGMVR">Ver código fonte</a>
         </p>
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> 
